# infix

./: .gitignore  001__primitives_8c.html  001__primitives_8c.js  001__primitives_8c__incl.map  001__primitives_8c__incl.md5  002__simple__calls_8c.html  002__simple__calls_8c.js  002__simple__calls_8c__incl.map  002__simple__calls_8c__incl.md5  003__type__system__api_8c.html  003__type__system__api_8c.js  003__type__system__api_8c__incl.map  003__type__system__api_8c__incl.md5  004__signatures_8c.html  004__signatures_8c.js  004__signatures_8c__incl.map  004__signatures_8c__incl.md5  005__layouts_8c.html  005__layouts_8c.js  005__layouts_8c__incl.map  005__layouts_8c__incl.md5  006__end__to__end__calls_8c.html  006__end__to__end__calls_8c.js  006__end__to__end__calls_8c__incl.map  006__end__to__end__calls_8c__incl.md5  007__type__registry_8c.html  007__type__registry_8c.js  007__type__registry_8c__incl.map  007__type__registry_8c__incl.md5  008__registry__introspection_8c.html  008__registry__introspection_8c.js  008__registry__introspection_8c__incl.map  008__registry__introspection_8c__incl.md5  009__bitfields__fam_8c.html  009__bitfields__fam_8c.js  009__bitfields__fam_8c__incl.map  009__bitfields__fam_8c__incl.md5  010__registry__scaling_8c.html  010__registry__scaling_8c.js  010__registry__scaling_8c__incl.map  (+1591 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apple_entitlements.yml  ci.yml  codeql.yml  create-git-main-docs.yml  create-pr-docs.yml  create-release-docs.yml  debugging-fuzz.yml  debugging-valgrind.yml  debugging.yml  delete_logs.yml  doxygen.yml  doxygen_future.yml  dump_arm_assembly.yml  dump_arm_assembly_giant_struct_by_value.yml  dump_arm_assembly_giant_struct_by_value_alt.yml  dump_arm_assembly_varargs.yml  dump_perl_hello_world_assembly.yml  dump_vectors.yml  new_doxygen_export.yml  remove-pr-docs.yml  (+1 more)
docs/: API.md  CMakeLists.txt  Doxyfile  INSTALL.md  cookbook.md  header.html  internals.md  porting.md  signatures.md
eg/: test_simd.c  win32_msgbox.c
fuzz/: fuzz_abi.c  fuzz_direct.c  fuzz_helpers.c  fuzz_helpers.h  fuzz_regression_helpers.h  fuzz_roundtrip.c  fuzz_signature.c  fuzz_trampoline.c  fuzz_types.c
git-main/: 001__primitives_8c.html  002__simple__calls_8c.html  003__type__system__api_8c.html  004__signatures_8c.html  005__layouts_8c.html  006__end__to__end__calls_8c.html  01__simple__call_8c.html  02__pointers_8c.html  03__opaque__pointers_8c.html  04__fixed__arrays_8c.html  05__dynamic__marshalling_8c.html  06__small__struct__by__value_8c.html  07__large__struct__by__reference_8c.html  08__return__struct_8c.html  09__packed__struct_8c.html  101__by__value_8c.html  102__by__reference_8c.html  103__unions_8c.html  10__unions_8c.html  11__pointer__to__array_8c.html  12__callback__qsort_8c.html  13__stateful__callback_8c.html  14__variadic__printf_8c.html  15__variadic__callback_8c.html  16__nested__calls_8c.html  17__return__callback_8c.html  18__cpp__example_8c.html  19__system__libraries_8c.html  201__basic_8c.html  202__in__structs_8c.html  203__complex_8c.html  301__primitives_8c.html  302__aggregates_8c.html  303__advanced_8c.html  401__large__stack_8c.html  402__variadic__functions_8c.html  403__special__types_8c.html  810__memory__stress_8c.html  811__fault__injection_8c.html  820__threading__helgrind_8c.html  (+344 more)
include/: infix.h
latest/: 001__primitives_8c.html  001__primitives_8c__incl.map  001__primitives_8c__incl.md5  002__simple__calls_8c.html  002__simple__calls_8c__incl.map  002__simple__calls_8c__incl.md5  003__type__system__api_8c.html  003__type__system__api_8c__incl.map  003__type__system__api_8c__incl.md5  004__signatures_8c.html  004__signatures_8c__incl.map  004__signatures_8c__incl.md5  005__layouts_8c.html  005__layouts_8c__incl.map  005__layouts_8c__incl.md5  006__end__to__end__calls_8c.html  006__end__to__end__calls_8c__incl.map  006__end__to__end__calls_8c__incl.md5  01__simple__call_8c.html  01__simple__call_8c__incl.map  01__simple__call_8c__incl.md5  02__pointers_8c.html  02__pointers_8c__incl.map  02__pointers_8c__incl.md5  03__opaque__pointers_8c.html  03__opaque__pointers_8c__incl.map  03__opaque__pointers_8c__incl.md5  04__fixed__arrays_8c.html  04__fixed__arrays_8c__incl.map  04__fixed__arrays_8c__incl.md5  05__dynamic__marshalling_8c.html  05__dynamic__marshalling_8c__incl.map  05__dynamic__marshalling_8c__incl.md5  06__small__struct__by__value_8c.html  06__small__struct__by__value_8c__incl.map  06__small__struct__by__value_8c__incl.md5  07__large__struct__by__reference_8c.html  07__large__struct__by__reference_8c__incl.map  07__large__struct__by__reference_8c__incl.md5  08__return__struct_8c.html  (+717 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+150 more)
src/: infix.c  utility.h
status/: status.json  status.md
t/: 001_primitives.c  002_simple_calls.c  003_type_system_api.c  004_signatures.c  005_layouts.c  006_end_to_end_calls.c  007_introspection.c  007_type_registry.c  008_registry_introspection.c  009_bitfields_fam.c  010_registry_scaling.c  011_bitfields.c  101_by_value.c  102_by_reference.c  103_unions.c  105_bitfields_fam_jit.c  201_basic.c  202_in_structs.c  203_complex.c  301_primitives.c  302_aggregates.c  303_advanced.c  304_reverse_call_types.c  305_bitfields_reverse.c  401_large_stack.c  402_variadic_functions.c  403_special_types.c  404_simd_vectors.c  405_simd_vectors_avx.c  406_simd_forward.c  407_float16.c  501_direct_marshalling.c  810_memory_stress.c  811_fault_injection.c  812_shared_arena.c  820_threading_helgrind.c  821_threading_bare.c  830_security.c  840_arena_allocator.c  850_regression_cases.c  (+15 more)
(+433 files in other folders)
